unpackaged/main/default/objects/Recommendation/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>