unpackaged/main/default/objects/Recommendation/fields/Targeted_Audience__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Audience__c</fullName>
    <inlineHelpText>Who should this recommendation target?</inlineHelpText>
    <label>Targeted Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Recommendation_Audience</valueSetName>
    </valueSet>
</CustomField>