unpackaged/main/default/objects/Recommendation/listViews/INTERNAL_Recommendations.listView-meta.xml
<ListView>
    <fullName>INTERNAL_Recommendations</fullName>
    <columns>Name</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Targeted_Audience__c</field>
        <operation>includes</operation>
        <value>All Internal Users,Sales Reps,Service Agents</value>
    </filters>
    <label>INTERNAL Recommendations</label>
</ListView>